appId: exactly
name: signIn
# url: http://localhost:8081
---
- extendedWaitUntil:
    visible:
      text: "Sign in"
    timeout: 15000
- tapOn: "Sign in"
- extendedWaitUntil:
    visible:
      text: "Your portfolio"
    timeout: 15000
