appId: ${APP_ID ?? "app.exactly"}
---
- tapOn: Payments
- waitForAnimationToEnd
- assertVisible: Total outstanding
- assertVisible: Statements
- assertVisible:
    text: \$[\s\d,.\xa0]+
    below: Total outstanding
- assertVisible: in \d+ payments?
- runFlow: { file: tapAria.yaml, env: { aria: Hide sensitive } }
- assertNotVisible:
    text: \$[\s\d,.\xa0]+
    below: Total outstanding
- runFlow: { file: tapAria.yaml, env: { aria: Show sensitive } }
- assertVisible:
    text: \$[\s\d,.\xa0]+
    below: Total outstanding
- assertVisible: { text: Pay, leftOf: Rollover }
- assertVisible: Rollover
- assertVisible: View statement
- runFlow: { file: tapAria.yaml, env: { aria: Total outstanding info } }
- assertVisible: This total includes all your purchases, loans, interest, and any applicable late fees.
- tapOn: Got it!
- runFlow: { file: tapAria.yaml, env: { aria: Payment info } }
- assertVisible: You can repay early and save on interest. The final amount updates automatically before you confirm.
- tapOn: Close
- tapOn: Home
- waitForAnimationToEnd
