appId: ${APP_ID ?? "app.exactly"}
---
# HACK https://github.com/mobile-dev-inc/Maestro/issues/2914
- runFlow:
    when: { true: "${maestro.platform != 'web'}" }
    commands:
      - retry:
          maxRetries: 3
          commands:
            - tapOn: "${tap ?? aria}"
            - extendedWaitUntil: { notVisible: "${aria}", timeout: 5000 }
- runFlow:
    when: { platform: web }
    commands:
      - retry:
          maxRetries: 3
          commands:
            - tapOn: "${tap ?? aria}"
            - extendedWaitUntil: { notVisible: { id: "${aria}" }, timeout: 5000 }
